--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,15 +38,11 @@ jobs:
             - Minor changes
 
       - name: Upload Release Assets
+        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          for file in ./release/*; do
-            echo "Uploading $file..."
-            curl \
-              -X POST \
-              -H "Authorization: token $GITHUB_TOKEN" \
-              -H "Content-Type: $(file -b --mime-type $file)" \
-              --data-binary @"$file" \
-              "${{ steps.create_release.outputs.upload_url }}?name=$(basename $file)"
-          done
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./release/*
+          asset_name: ${{ basename }}
+          asset_content_type: application/octet-stream
