--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,16 @@ jobs:
             - Minor changes
 
       - name: Upload Release Assets
-        uses: actions/upload-release-asset@v1
+        run: |
+          for file in ./release/*; do
+            echo "Uploading $file..."
+            curl \
+              -X POST \
+              -H "Authorization: token $GITHUB_TOKEN" \
+              -H "Content-Type: application/octet-stream" \
+              -V \
+              --data-binary @"$file" \
+              "${{ steps.create_release.outputs.upload_url }}?name=$(basename $file)"
+          done
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/*
-          asset_name: ${{ basename }}
-          asset_content_type: application/octet-stream
