--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,29 @@
 name: Release
- 
+
 on:
   push:
     tags:
       - 'v*'
- 
+
 jobs:
   release:
     runs-on: ubuntu-latest
- 
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
- 
+
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
           node-version: 20
- 
+
       - name: Install Dependencies
         run: npm install
- 
+
       - name: Build
         run: npm run pkg
- 
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@latest
@@ -39,15 +39,9 @@ jobs:
 
       - name: Upload Release Assets
         run: |
-          for file in ./release/*; do
+          for file in ./pkg/*; do
             echo "Uploading $file..."
-            curl \
-              -X POST \
-              -H "Authorization: token $GITHUB_TOKEN" \
-              -H "Content-Type: application/octet-stream" \
-              -V \
-              --data-binary @"$file" \
-              "${{ steps.create_release.outputs.upload_url }}?name=$(basename $file)"
+            gh asset upload ${{ steps.create_release.outputs.upload_url }} "$file"
           done
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
