--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,12 @@ jobs:
             - Major changes
             - Minor changes
 
-      - name: Upload Release Assets
-        run: |
-          for file in ./release/*; do
-            echo "Uploading $file..."
-            gh asset upload ${{ steps.create_release.outputs.upload_url }} "$file"
-          done
+      - name: Upload to Release
+        uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./release/DownloadMusic-win-x64.exe
+          asset_name: DownloadMusic-win-x64.exe
+          asset_content_type: application/x-msdownload
