--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,18 +13,21 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 20
+      # - name: Setup Node
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: 20
 
       - name: Install Dependencies
-        run: npm install
+        run:  echo "SERVER=${{ vars.SERVER }}"
 
-      - name: Build
-        run: npm run pkg
-        env:
-          SERVER: ${{ vars.SERVER }}  # 从 Secrets 读取
+      # - name: Install Dependencies
+      #   run: npm install
+
+      # - name: Build
+      #   run: npm run pkg
+      #   env:
+      #     SERVER: ${{ vars.SERVER }}  # 从 Secrets 读取
 
       - name: Create Release
         id: create_release
@@ -33,21 +36,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: Release ${{ github.ref }} server ${{ vars.SERVER }}
           body: |
             Changes in this release:
             - Major changes
             - Minor changes
 
-      - name: Upload to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/DownloadMusic-win-x64.exe
-          asset_name: DownloadMusic-win-x64.exe
-          asset_content_type: application/x-msdownload
+      # - name: Upload to Release
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: ./release/DownloadMusic-win-x64.exe
+      #     asset_name: DownloadMusic-win-x64.exe
+      #     asset_content_type: application/x-msdownload
 
       # - name: Upload to Release
       #   uses: actions/upload-release-asset@v1
