--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,6 @@ on:
     tags:
       - 'v*'
 
-env:
-  env_var: ${{ vars.SERVER }}
-
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -16,27 +13,19 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      # - name: Setup Node
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: 20
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20
+
 
       - name: Install Dependencies
-        run: |
-          echo "repository variable : $SERVER"
-          echo "organization variable : $SERVER2"
-          echo "variable from shell environment : $env_var"
+        run: npm install
+
+      - name: Build
+        run: npm run pkg
         env:
           SERVER: ${{ vars.SERVER }}
-          SERVER2: ${{ vars.SERVER2 }}
-
-      # - name: Install Dependencies
-      #   run: npm install
-
-      # - name: Build
-      #   run: npm run pkg
-      #   env:
-      #     SERVER: ${{ vars.SERVER }}  # 从 Secrets 读取
 
       - name: Create Release
         id: create_release
@@ -51,15 +40,15 @@ jobs:
             - Major changes
             - Minor changes
 
-      # - name: Upload to Release
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: ./release/DownloadMusic-win-x64.exe
-      #     asset_name: DownloadMusic-win-x64.exe
-      #     asset_content_type: application/x-msdownload
+      - name: Upload to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./release/DownloadMusic-win-x64.exe
+          asset_name: DownloadMusic-win-x64.exe
+          asset_content_type: application/x-msdownload
 
       # - name: Upload to Release
       #   uses: actions/upload-release-asset@v1
